fix:移除 gprc 服务
